# foray

./: .editorconfig  .gitattributes  .gitignore  .golangci.yml  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  go.mod  go.sum
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  invariant-gate.yml
.github/workflows/: ci.yml  release.yml
cmd/foray/: main.go
cmd/foray-web/: main.go
cmd/forayd/: main.go
deploy/terraform/: README.md  api.tf  cdn.tf  dynamodb.tf  example.tfvars  iam.tf  lambda.tf  main.tf  outputs.tf  storage.tf  variables.tf
internal/brain/: agentcore.go  agentcore_test.go  bedrock.go  brain.go  cedar.go  cedar_test.go  expert.go  expert_test.go  fake.go  interpret.go  interpret_test.go  invariants_test.go  plan_test.go  pricing.go  real.go
internal/catalog/: catalog.go  catalog_test.go
internal/device/: device.go  device_test.go  neuron.go
internal/export/: export.go  fake.go  s3.go  s3_test.go
internal/gateway/: dynamo.go  dynamo_test.go  fake.go  (+8 more)
scripts/: deploy-check.sh  gh-bootstrap-2.sh  gh-bootstrap.sh  gh-project.sh  invariant-check.sh  license-check.sh  teardown-verify.sh
web/: app.js  index.html  styles.css
worker/: Dockerfile  README.md  __init__.py  app.py  config.py  device.py  engine.py  fake.py  graph.py  loader.py  pyproject.toml  requirements-gpu.txt  requirements.txt  saves.py  smoke.py
worker/tests/: __init__.py  test_app.py  test_device.py  test_engine.py
(+20 files in other folders)
